Vanilla FeaturedWeightedEmbedding class module added

--- a/main.ipynb
+++ b/main.ipynb
@@ -1695,6 +1695,96 @@
     "\n",
     "print(f\"X: {X_instance}\\nmask: {mask_instance}\\ny: {y_instance}\\nwindow: {window_instance}\\n\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following array are all the meteorological variables requested from the era5 API, and that will be used to instantiate Stormer. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "variables = [\n",
+    "        \"10m_u_component_of_wind\",\n",
+    "        \"10m_v_component_of_wind\",\n",
+    "        \"2m_dewpoint_temperature\",\n",
+    "        \"2m_temperature\",\n",
+    "        \"mean_sea_level_pressure\",\n",
+    "        \"sea_surface_temperature\",\n",
+    "        \"surface_pressure\",\n",
+    "        \"total_precipitation\",\n",
+    "        \"ice_temperature_layer_1\",\n",
+    "        \"ice_temperature_layer_2\",\n",
+    "        \"ice_temperature_layer_3\",\n",
+    "        \"ice_temperature_layer_4\",\n",
+    "        \"maximum_2m_temperature_since_previous_post_processing\",\n",
+    "        \"minimum_2m_temperature_since_previous_post_processing\",\n",
+    "        \"skin_temperature\",\n",
+    "        \"100m_u_component_of_wind\",\n",
+    "        \"100m_v_component_of_wind\",\n",
+    "        \"10m_u_component_of_neutral_wind\",\n",
+    "        \"10m_v_component_of_neutral_wind\",\n",
+    "        \"10m_wind_gust_since_previous_post_processing\",\n",
+    "        \"instantaneous_10m_wind_gust\",\n",
+    "        \"cloud_base_height\",\n",
+    "        \"high_cloud_cover\",\n",
+    "        \"low_cloud_cover\",\n",
+    "        \"medium_cloud_cover\",\n",
+    "        \"total_cloud_cover\",\n",
+    "        \"total_column_cloud_ice_water\",\n",
+    "        \"total_column_cloud_liquid_water\",\n",
+    "        \"vertical_integral_of_divergence_of_cloud_frozen_water_flux\",\n",
+    "        \"vertical_integral_of_divergence_of_cloud_liquid_water_flux\",\n",
+    "        \"vertical_integral_of_eastward_cloud_frozen_water_flux\",\n",
+    "        \"vertical_integral_of_eastward_cloud_liquid_water_flux\",\n",
+    "        \"vertical_integral_of_northward_cloud_frozen_water_flux\",\n",
+    "        \"vertical_integral_of_northward_cloud_liquid_water_flux\",\n",
+    "        \"convective_precipitation\",\n",
+    "        \"convective_rain_rate\",\n",
+    "        \"instantaneous_large_scale_surface_precipitation_fraction\",\n",
+    "        \"large_scale_rain_rate\",\n",
+    "        \"large_scale_precipitation\",\n",
+    "        \"large_scale_precipitation_fraction\",\n",
+    "        \"maximum_total_precipitation_rate_since_previous_post_processing\",\n",
+    "        \"minimum_total_precipitation_rate_since_previous_post_processing\",\n",
+    "        \"precipitation_type\",\n",
+    "        \"total_column_rain_water\",\n",
+    "        \"convective_snowfall\",\n",
+    "        \"convective_snowfall_rate_water_equivalent\",\n",
+    "        \"large_scale_snowfall_rate_water_equivalent\",\n",
+    "        \"large_scale_snowfall\",\n",
+    "        \"snow_albedo\",\n",
+    "        \"snow_density\",\n",
+    "        \"snow_depth\",\n",
+    "        \"snow_evaporation\",\n",
+    "        \"snowfall\",\n",
+    "        \"snowmelt\",\n",
+    "        \"temperature_of_snow_layer\",\n",
+    "        \"total_column_snow_water\"\n",
+    "    ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.met_transformer.met_model import Stormer\n",
+    "\n",
+    "stormer = Stormer(img_size=[128, 256],\n",
+    "                  variables=variables,\n",
+    "                  patch_size=2,\n",
+    "                  hidden_size=1024,\n",
+    "                  depth=24,\n",
+    "                  num_heads=16,\n",
+    "                  mlp_ratio=4.0)"
+   ]
   }
  ],
  "metadata": {
