Passed proper init_weights argument to Stormer's FeaturedWeightedEmbedding

--- a/main.ipynb
+++ b/main.ipynb
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1298,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1705,7 +1705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1770,10 +1770,92 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When assigning initial weights to certain variables due to their greater signficance, one can use the following internal mapping from the `met_data_setup.py` file that has the internal feature mapping used by the `.csv` file due to its creation using `pygrib`. Such mapping lacks however the offsets which must be added. When instantiating the `FeatureWeatherEmbedding` class in `met_model.py`, one can refer to this mapping to select the desired variables and assign the right weights. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "weather_mapping = {\n",
+    "    '10u':   '10 metre U wind component',\n",
+    "    '10v':   '10 metre V wind component',\n",
+    "    '2d':    '2 metre dewpoint temperature',\n",
+    "    '2t':    '2 metre temperature',\n",
+    "    'msl':   'Mean sea level pressure',\n",
+    "    'sst':   'Sea surface temperature',\n",
+    "    'sp':    'Surface pressure',\n",
+    "    'tp':    'Total precipitation',\n",
+    "    'istl1': 'Ice temperature layer 1',\n",
+    "    'istl2': 'Ice temperature layer 2',\n",
+    "    'istl3': 'Ice temperature layer 3',\n",
+    "    'istl4': 'Ice temperature layer 4',\n",
+    "    'mx2t':  'Maximum temperature at 2 metres since previous post-processing',\n",
+    "    'mn2t':  'Minimum temperature at 2 metres since previous post-processing',\n",
+    "    'skt':   'Skin temperature',\n",
+    "    '100u':  '100 metre U wind component',\n",
+    "    '100v':  '100 metre V wind component',\n",
+    "    'u10n':  '10 metre u-component of neutral wind',\n",
+    "    'v10n':  '10 metre v-component of neutral wind',\n",
+    "    '10fg':  'Maximum 10 metre wind gust since previous post-processing',\n",
+    "    'i10fg': 'Instantaneous 10 metre wind gust',\n",
+    "    'cbh':   'Cloud base height',\n",
+    "    'hcc':   'High cloud cover',\n",
+    "    'lcc':   'Low cloud cover',\n",
+    "    'mcc':   'Medium cloud cover',\n",
+    "    'tcc':   'Total cloud cover',\n",
+    "    'tciw':  'Total column cloud ice water',\n",
+    "    'tclw':  'Total column cloud liquid water',\n",
+    "    'viiwd': 'Vertical integral of divergence of cloud frozen water flux',\n",
+    "    'vilwd': 'Vertical integral of divergence of cloud liquid water flux',\n",
+    "    'viiwe': 'Vertical integral of eastward cloud frozen water flux',\n",
+    "    'vilwe': 'Vertical integral of eastward cloud liquid water flux',\n",
+    "    'viiwn': 'Vertical integral of northward cloud frozen water flux',\n",
+    "    'vilwn': 'Vertical integral of northward cloud liquid water flux',\n",
+    "    'cp':    'Convective precipitation',\n",
+    "    'crr':   'Convective rain rate',\n",
+    "    'ilspf': 'Instantaneous large-scale surface precipitation fraction',\n",
+    "    'lsrr':  'Large scale rain rate',\n",
+    "    'lsp':   'Large-scale precipitation',\n",
+    "    'lspf':  'Large-scale precipitation fraction',\n",
+    "    'mxtpr': 'Maximum total precipitation rate since previous post-processing',\n",
+    "    'mntpr': 'Minimum total precipitation rate since previous post-processing',\n",
+    "    'ptype': 'Precipitation type',\n",
+    "    'tcrw':  'Total column rain water',\n",
+    "    'csf':   'Convective snowfall',\n",
+    "    'csfr':  'Convective snowfall rate water equivalent',\n",
+    "    'lssfr': 'Large scale snowfall rate water equivalent',\n",
+    "    'lsf':   'Large-scale snowfall',\n",
+    "    'asn':   'Snow albedo',\n",
+    "    'rsn':   'Snow density',\n",
+    "    'sd':    'Snow depth',\n",
+    "    'es':    'Snow evaporation',\n",
+    "    'sf':    'Snowfall',\n",
+    "    'smlt':  'Snowmelt',\n",
+    "    'tsn':   'Temperature of snow layer',\n",
+    "    'tcsw':  'Total column snow water'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'10u': 0.0, '10v': 0.0, '2d': 0.0, '2t': 0.0, 'msl': 0.0, 'sst': 0.0, 'sp': 0.0, 'istl1': 0.0, 'istl2': 0.0, 'istl3': 0.0, 'istl4': 0.0, 'mx2t': 0.0, 'mn2t': 0.0, 'skt': 0.0, '100u': 0.0, '100v': 0.0, 'u10n': 0.0, 'v10n': 0.0, '10fg': 0.0, 'i10fg': 0.0, 'tsn': 0.0}\n",
+      "hello\n"
+     ]
+    }
+   ],
    "source": [
     "from src.met_transformer.met_model import Stormer\n",
     "\n",
