Stormer class added. Debugged size errors too.

--- a/main.ipynb
+++ b/main.ipynb
@@ -1705,7 +1705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1778,7 +1778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1843,24 +1843,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When initializing the Stormer model, we pass it an extensive list of variables. However, according to research, not all variables have the same influence on weather patterns. Pressure, temperature, and wind have been consistently identified as major weather drivers. Therefore, while the model itself can increase the weight of these parameters as it identifies that the target is more significantly predicted by these, we aim at saving time and increase performance by providing said weights with a boost to signal their more relevant importance. \n",
+    "\n",
+    "Consequently, due to this weight initialization, we shall later incorporate regularization (either spare or bounded) to help prevent over-reliance on any one of these weather variables. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "met_weights = {\n",
+    "    key: 1.2 # an 20% boost to these key weights\n",
+    "    for key, description in weather_mapping.items()\n",
+    "    if any(term in description.lower() for term in (\"wind\", \"temperature\", \"pressure\"))\n",
+    "}\n",
+    "\n",
+    "# We adapt the variable names of the weights to all the offset features\n",
+    "offsets= range(0, 8)\n",
+    "met_weights_with_offset = {\n",
+    "    f\"{feat}_t-{off}\":weight\n",
+    "    for feat, weight in met_weights.items()\n",
+    "    for off in offsets\n",
+    "}\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'10u': 0.0, '10v': 0.0, '2d': 0.0, '2t': 0.0, 'msl': 0.0, 'sst': 0.0, 'sp': 0.0, 'istl1': 0.0, 'istl2': 0.0, 'istl3': 0.0, 'istl4': 0.0, 'mx2t': 0.0, 'mn2t': 0.0, 'skt': 0.0, '100u': 0.0, '100v': 0.0, 'u10n': 0.0, 'v10n': 0.0, '10fg': 0.0, 'i10fg': 0.0, 'tsn': 0.0}\n",
-      "hello\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from src.met_transformer.met_model import Stormer\n",
     "\n",
     "stormer = Stormer(img_size=[128, 256],\n",
     "                  variables=variables,\n",
+    "                  met_weights=met_weights_with_offset,\n",
     "                  patch_size=2,\n",
     "                  hidden_size=1024,\n",
     "                  depth=24,\n",
