Base training code added. Have to tweak met_train to Stormer and set up hyperparameters.

--- a/main.ipynb
+++ b/main.ipynb
@@ -684,37 +684,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "      <iframe id=\"tensorboard-frame-3a7cc138ff9586d0\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
-       "      </iframe>\n",
-       "      <script>\n",
-       "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-3a7cc138ff9586d0\");\n",
-       "          const url = new URL(\"/\", window.location);\n",
-       "          const port = 6006;\n",
-       "          if (port) {\n",
-       "            url.port = port;\n",
-       "          }\n",
-       "          frame.src = url;\n",
-       "        })();\n",
-       "      </script>\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%load_ext tensorboard\n",
-    "%tensorboard --logdir runs"
+    "!tensorboard --logdir runs --host=127.0.0.1 --port=6006"
    ]
   },
   {
@@ -1888,6 +1860,94 @@
     "                  depth=24,\n",
     "                  num_heads=16,\n",
     "                  mlp_ratio=4.0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Stormer Model training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.met_transformer.met_train import train_step, test_step\n",
+    "\n",
+    "# Hyperparameters pulled from the paper\n",
+    "loss_fn = nn.MSELoss().to(device)\n",
+    "optimizer = torch.optim.AdamW(stormer.parameters(),lr=3e-4, betas=(0.9, 0.999), weight_decay=1e-2)\n",
+    "\n",
+    "train_step(model=stormer,\n",
+    "           dataloader=weather_train_dataloader,\n",
+    "           loss_fn=loss_fn,\n",
+    "           optimizer=optimizer,\n",
+    "           device=device\n",
+    ")\n",
+    "\n",
+    "val_step = test_step(model=saint,\n",
+    "                     dataloader=weather_val_dataloader,\n",
+    "                     loss_fn=loss_fn,\n",
+    "                     device=device)\n",
+    "\n",
+    "val_step"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "writer = SummaryWriter()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "from helper_functions import set_seeds\n",
+    "from src.tab_transformer.tab_train import train\n",
+    "\n",
+    "set_seeds(42)\n",
+    "\n",
+    "\n",
+    "results = train(model=stormer,\n",
+    "      train_dataloader=weather_train_dataloader,\n",
+    "      val_dataloader=weather_val_dataloader,\n",
+    "      test_dataloader=weather_test_dataloader,\n",
+    "      optimizer=optimizer,\n",
+    "      loss_fn=loss_fn,\n",
+    "      epochs=10,\n",
+    "      writer=create_writer(experiment_name=\"first_run\",\n",
+    "                                   model_name=\"stormer\")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from helper_functions import plot_loss_curves\n",
+    "\n",
+    "plot_loss_curves(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!tensorboard --logdir runs --host=127.0.0.1 --port=6006"
    ]
   }
  ],
