--- a/main.ipynb
+++ b/main.ipynb
@@ -1374,7 +1374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1384,42 +1384,7 @@
     "    if any(term in description.lower() for term in (\"wind\", \"temperature\", \"pressure\"))\n",
     "}\n",
     "\n",
-    "priority_features = [key for key in met_weights]\n",
-    "\n",
-    "# We adapt the variable names of the weights to all the offset features\n",
-    "offsets= range(0, 8)\n",
-    "met_weights_with_offset = {\n",
-    "    f\"{feat}_t-{off}\":weight\n",
-    "    for feat, weight in met_weights.items()\n",
-    "    for off in offsets\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['100u', '100v', '10fg', '10u', '10v', '2d', '2t', 'asn', 'cbh', 'cp', 'crr', 'csf', 'csfr', 'es', 'hcc', 'i10fg', 'ilspf', 'istl1', 'istl2', 'istl3', 'istl4', 'lcc', 'lsf', 'lsp', 'lspf', 'lsrr', 'lssfr', 'mcc', 'mn2t', 'mntpr', 'msl', 'mx2t', 'mxtpr', 'ptype', 'rsn', 'sd', 'sf', 'skt', 'smlt', 'sp', 'tcc', 'tciw', 'tclw', 'tcrw', 'tcsw', 'tp', 'tsn', 'u10n', 'v10n', 'viiwd', 'viiwe', 'viiwn', 'vilwd', 'vilwe', 'vilwn']\n",
-      "[1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 1 0 1 1 1 1 0 0 0 0 0 0 0 1 0 1 1 0 0 0 0 0\n",
-      " 1 0 1 0 0 0 0 0 0 1 1 1 0 0 0 0 0 0]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# from src.met_transformer.met_utils import WeatherDataset\n",
-    "# from pathlib import Path\n",
-    "\n",
-    "# splits_path = Path(\"data/era5_data\")\n",
-    "# test = WeatherDataset(csv_file=splits_path / \"train\" / \"train.csv\",\n",
-    "#                       target_column='Target',\n",
-    "#                       metadata_cols=[\"PEAKID\", \"parent_peakid\", \"event_date\"],\n",
-    "#                       continuous_mean_std=None,\n",
-    "#                       priority_features=['10u', '10v', '2d', '2t', 'msl', 'sst', 'sp', 'istl1', 'istl2', 'istl3', 'istl4', 'mx2t', 'mn2t', 'skt', '100u', '100v', 'u10n', 'v10n', '10fg', 'i10fg', 'tsn'])"
+    "priority_features = [key for key in met_weights]"
    ]
   },
   {
@@ -1449,7 +1414,7 @@
     "X = weather_df.drop(columns=[\"Target\"])\n",
     "y = weather_df[\"Target\"]\n",
     "\n",
-    "# set_data_splits(X, y, splits_path, seed=42)\n",
+    "set_data_splits(X, y, splits_path, seed=42)\n",
     "\n",
     "weather_train_dataloader, weather_val_dataloader, weather_test_dataloader = create_dataloaders(\n",
     "    dataset_class=WeatherDataset,\n",
@@ -1469,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1480,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1502,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1570,7 +1535,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When assigning initial weights to certain variables due to their greater signficance, one can use the `weather_mapping` used above, which was obtained from the `met_data_setup.py` file that has the internal feature mapping used by the `.csv` file due to its creation using `pygrib`. Such mapping lacks however the offsets which must be added. When instantiating the `FeatureWeatherEmbedding` class in `met_model.py`, one can refer to this mapping to select the desired variables and assign the right weights. "
+    "When assigning initial weights to certain variables due to their greater significance, one can use the `weather_mapping` used above, which was obtained from the `met_data_setup.py` file that has the internal feature mapping used by the `.csv` file due to its creation using `pygrib`. Such mapping lacks however the offsets which are added below. When instantiating the `FeatureWeatherEmbedding` class in `met_model.py`, one can refer to this mapping to select the desired variables and assign the right weights. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "offsets= range(0, 8)\n",
+    "met_weights_with_offset = {\n",
+    "    f\"{feat}_t-{off}\":weight\n",
+    "    for feat, weight in met_weights.items()\n",
+    "    for off in offsets\n",
+    "}"
    ]
   },
   {
@@ -1584,7 +1563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1613,6 +1592,125 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First instance\n",
+      "X:tensor([[ 0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00],\n",
+      "        [ 7.3647e-02, -6.8810e-01,  1.3685e+00, -4.9730e-02, -7.0163e-01,\n",
+      "          7.4431e-02,  6.0017e-02, -3.3927e-01, -6.4874e-01,  7.3155e-02,\n",
+      "          2.6006e-01,  5.2759e-01,  1.2541e+00, -2.8160e+00, -1.1252e-01,\n",
+      "          1.1234e+00,  7.6946e-02, -2.6404e+00, -8.4884e-01,  1.0203e+00,\n",
+      "          0.0000e+00,  2.7046e-01, -4.9455e-03,  2.5156e-01, -1.0097e-01,\n",
+      "          2.0100e-01,  1.0793e-02,  4.2671e-02,  3.9289e-02,  2.9933e-01,\n",
+      "          3.2457e-01,  3.2876e-02,  3.7869e-01,  4.9223e-01,  1.9583e+00,\n",
+      "          1.6610e+00,  1.0723e-01,  2.4057e-01, -6.2737e-02,  7.2411e-01,\n",
+      "          9.5660e-02,  3.2607e-01,  2.5449e-01, -2.4513e-01, -1.4478e-01,\n",
+      "          2.1224e-01,  2.0182e-01, -8.2932e-02, -9.6176e-01,  2.7716e-01,\n",
+      "          6.5316e-01,  3.6156e-01,  9.3917e-01,  1.3001e+00, -8.4896e-01],\n",
+      "        [-3.0077e-01,  4.2646e-01,  5.4798e-01, -3.4578e-01, -2.0631e-01,\n",
+      "          2.4796e-01,  2.1639e-01, -1.5051e-01, -5.4695e-01,  8.7899e-01,\n",
+      "          1.1286e+00, -3.3489e-01, -2.4452e-01, -1.6496e+00, -4.1126e-01,\n",
+      "          4.3610e-01,  1.5744e-01,  1.0954e+00,  4.8343e-01, -1.2970e+00,\n",
+      "          0.0000e+00,  1.3968e-01, -3.3624e-01, -9.0234e-02,  2.1355e-01,\n",
+      "         -1.7754e-01, -2.9112e-01, -2.8187e-01, -4.7799e-02, -2.5340e-02,\n",
+      "         -7.0684e-02, -3.4020e-02,  3.4965e-01,  8.3332e-01,  2.0119e+00,\n",
+      "          1.6643e+00, -3.6355e-01,  2.6526e-01, -4.9825e-02,  6.3224e-01,\n",
+      "         -2.9258e-01,  2.5845e-02, -4.2055e-02, -1.7414e-01, -1.3817e-01,\n",
+      "          3.7469e-01,  1.8532e-01, -3.4576e-01, -1.6068e-01,  1.3698e+00,\n",
+      "          1.5030e-01,  1.3334e-01,  5.1623e-01,  7.7588e-01,  6.6338e-02],\n",
+      "        [-9.8922e-02,  3.3678e-01,  1.9341e-01,  7.5022e-03,  4.0351e-01,\n",
+      "         -2.2032e-02,  3.0491e-02,  9.4859e-02, -5.4506e-02,  8.7598e-01,\n",
+      "          1.3926e+00, -3.0025e-01, -1.3356e-01, -1.5499e+00, -6.6063e-01,\n",
+      "          2.8446e-01, -1.8954e-01, -9.8317e-02,  5.6252e-01, -3.0584e-01,\n",
+      "          0.0000e+00, -4.7912e-01,  1.8917e-02, -1.9216e-01, -1.6858e-01,\n",
+      "         -2.2958e-01, -1.1887e-02, -8.1720e-01,  1.9446e-02,  5.3529e-02,\n",
+      "         -1.4261e-01,  2.0174e-02,  1.7992e-01,  2.8228e-01,  1.9514e+00,\n",
+      "          1.6667e+00, -4.8864e-02,  8.3509e-02,  1.3291e-01,  5.8062e-01,\n",
+      "         -8.6609e-01, -3.8851e-01, -7.6386e-01, -2.5283e-01, -2.5749e-01,\n",
+      "          2.8348e-01,  1.8291e-01,  1.0236e-01,  5.3226e-01,  1.2370e-01,\n",
+      "         -3.0057e-01, -1.8178e-01,  1.2226e-01, -2.8727e-01, -2.7187e-01],\n",
+      "        [-5.3483e-01,  5.1724e-01, -4.8462e-01, -7.7919e-01,  3.4741e-01,\n",
+      "         -4.4629e-02,  1.1956e-01,  1.9914e-01, -5.2933e-01, -5.2017e-01,\n",
+      "         -3.8629e-01, -4.0316e-01, -3.2795e-01, -1.5542e+00, -6.3802e-01,\n",
+      "         -4.3275e-01, -5.2569e-01,  1.1407e+00,  3.3116e-01, -1.0401e+00,\n",
+      "          0.0000e+00, -4.7396e-01, -3.1963e-01, -3.5771e-01, -4.8709e-01,\n",
+      "         -2.9143e-01, -2.7659e-01, -1.7731e-01, -3.0857e-01, -3.9811e-01,\n",
+      "         -8.9518e-02, -3.0124e-01, -5.3132e-01,  3.3628e-01,  1.8407e+00,\n",
+      "          1.6628e+00, -3.7149e-01,  2.2141e-01, -2.7002e-02,  5.9483e-01,\n",
+      "         -5.9851e-01, -2.5980e-01, -7.6597e-01, -2.2771e-01, -2.0355e-01,\n",
+      "         -5.0387e-01,  1.0338e-01, -7.7018e-01,  6.3396e-01, -4.1605e-01,\n",
+      "         -2.0490e-01, -1.3725e-01, -2.5150e-01, -1.8321e-01, -7.0058e-02],\n",
+      "        [ 1.0404e-01,  1.5936e+00,  6.0021e-01, -3.7154e-01,  1.2341e+00,\n",
+      "          1.2185e-01,  6.1610e-01,  3.0187e-01,  1.0992e-01, -3.4326e-01,\n",
+      "         -3.9818e-01,  1.7623e+00,  1.6248e+00, -2.9349e+00, -6.4943e-01,\n",
+      "          7.0982e-01, -5.8003e-01,  5.7828e-01,  4.4216e-01,  8.8624e-01,\n",
+      "          0.0000e+00,  1.4189e-01, -9.7928e-03, -2.4648e-01, -5.6450e-01,\n",
+      "         -2.4682e-01,  6.1077e-03, -7.2027e-01,  1.0175e-01, -2.9985e-01,\n",
+      "          7.4460e-02,  8.7643e-02, -3.6456e-01,  4.8133e-01,  1.6793e+00,\n",
+      "          1.6643e+00,  3.1082e-01,  2.7256e-01,  5.6833e-01,  6.4961e-01,\n",
+      "         -3.6998e-01, -3.5426e-01, -5.5898e-01, -1.9227e-01, -2.1181e-01,\n",
+      "         -3.2036e-01,  5.0812e-02, -4.1188e-01,  1.9069e+00,  4.1984e-01,\n",
+      "         -2.6387e-01, -1.5935e-01, -2.8668e-01, -3.6360e-01,  4.9959e-02],\n",
+      "        [-2.1328e-01,  1.1084e+00,  1.2443e+00, -5.4313e-01,  4.1387e-01,\n",
+      "          5.6043e-01,  6.6271e-01,  2.0571e-01, -8.2502e-01, -3.1892e-01,\n",
+      "         -5.1153e-01,  2.3618e+00,  4.8772e-01, -9.7030e-01, -6.5568e-01,\n",
+      "          1.2812e+00, -6.0046e-01,  2.8103e-01,  1.1427e+00,  8.9223e-01,\n",
+      "          0.0000e+00, -1.2506e+00, -1.9947e-01, -2.8259e-01, -5.7187e-01,\n",
+      "         -2.6949e-01, -1.9908e-01, -9.3026e-01,  9.7956e-02, -3.2654e-01,\n",
+      "          1.4511e-01,  1.0547e-01, -3.7641e-01,  1.1985e-01,  1.6877e+00,\n",
+      "          1.6707e+00,  3.5241e-01,  4.2426e-01,  4.5986e-01,  7.2710e-01,\n",
+      "         -1.4632e+00, -3.7409e-01, -7.9252e-01, -2.1129e-01, -2.2726e-01,\n",
+      "         -3.3465e-01,  2.1034e-01, -7.6256e-01,  5.8581e-01,  3.0272e-01,\n",
+      "         -1.4979e-01, -1.1752e-01,  4.5184e-02, -1.5076e-01, -1.6488e-01],\n",
+      "        [-2.0831e-01,  1.1043e-01,  1.4471e+00, -6.5657e-01,  2.3065e-02,\n",
+      "          1.7313e-01,  1.8824e-01,  4.7745e-03, -3.7996e-01, -5.6950e-01,\n",
+      "         -3.1721e-01, -2.9661e-01, -2.4897e-01, -1.3703e+00, -6.3192e-01,\n",
+      "          1.5290e+00, -1.1929e+00, -1.7935e-01, -1.0348e+00, -4.2958e-01,\n",
+      "          0.0000e+00, -3.7421e-01, -3.7697e-01, -3.0792e-01, -1.2101e+00,\n",
+      "         -2.6728e-01, -3.5277e-01, -9.0440e-01,  5.1963e-01, -3.6850e-01,\n",
+      "         -8.0451e-01,  5.1373e-01, -4.9845e-01, -2.8886e-01,  1.4317e+00,\n",
+      "          1.6819e+00, -3.9640e-01,  1.9697e-01,  1.9543e-01,  5.2133e-01,\n",
+      "         -7.8362e-01, -4.3052e-01, -6.3094e-01, -2.2185e-01, -2.3296e-01,\n",
+      "         -4.4665e-01,  1.1105e-01, -8.2185e-01,  3.8851e-04,  3.9758e-02,\n",
+      "         -3.4088e-01, -2.0874e-01,  1.6172e-01, -1.4025e-01, -2.6538e-01],\n",
+      "        [-6.3828e-01,  1.3232e-01,  1.5461e+00, -9.1321e-01,  3.2771e-01,\n",
+      "          3.1260e-01,  3.8902e-01, -1.9148e-01,  8.0132e-01, -5.1656e-01,\n",
+      "         -4.3098e-01, -3.5232e-01, -2.8246e-01, -1.0700e+00, -7.1944e-01,\n",
+      "          1.5976e+00, -9.7938e-01, -1.4208e+00,  5.9535e-01,  1.0669e+00,\n",
+      "          0.0000e+00, -9.2165e-01, -3.6921e-01, -3.2218e-01, -9.2599e-01,\n",
+      "         -2.8051e-01, -3.4048e-01, -9.1146e-01, -2.1328e-02, -3.6154e-01,\n",
+      "         -1.2586e+00, -2.0359e-02, -4.4737e-01, -7.9493e-02,  1.5562e+00,\n",
+      "          1.6951e+00, -3.9782e-01,  2.2700e-01, -1.9132e-01,  4.1091e-01,\n",
+      "         -1.2172e+00, -4.1429e-01, -8.2605e-01, -2.3833e-01, -2.5071e-01,\n",
+      "         -4.2507e-01,  5.8669e-02, -1.0247e+00,  6.4927e-01,  1.4174e-01,\n",
+      "         -2.4684e-01, -2.3995e-01,  2.8659e-01, -1.3993e-01, -2.8769e-01]])\n",
+      "mask:tensor([1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 1, 1, 1, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 1, 0, 1, 1, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 1,\n",
+      "        1, 1, 0, 0, 0, 0, 0, 0])\n",
+      "y:1\n",
+      "window_mask:tensor([[1, 1, 0, 0, 0, 0, 0, 0, 0],\n",
+      "        [1, 1, 1, 0, 0, 0, 0, 0, 0],\n",
+      "        [1, 1, 1, 1, 0, 0, 0, 0, 0],\n",
+      "        [1, 1, 1, 1, 1, 0, 0, 0, 0],\n",
+      "        [1, 1, 1, 1, 1, 1, 0, 0, 0],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 0, 0],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 0],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 1]])\n",
+      "\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "(0.0, 0.0)"
@@ -1626,9 +1724,6 @@
    "source": [
     "from src.met_transformer.met_train import train_step, test_step\n",
     "\n",
-    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "device\n",
-    "\n",
     "# Hyperparameters pulled from the paper\n",
     "loss_fn = nn.MSELoss().to(device)\n",
     "optimizer = torch.optim.AdamW(stormer.parameters(),lr=3e-4, betas=(0.9, 0.999), weight_decay=1e-2)\n",
@@ -1637,20 +1732,21 @@
     "           dataloader=weather_train_dataloader,\n",
     "           loss_fn=loss_fn,\n",
     "           optimizer=optimizer,\n",
-    "           device=device\n",
+    "           device=device,\n",
+    "           lambda_reg=1e-3\n",
     ")\n",
     "\n",
-    "# val_step = test_step(model=saint,\n",
-    "#                      dataloader=weather_val_dataloader,\n",
-    "#                      loss_fn=loss_fn,\n",
-    "#                      device=device)\n",
+    "val_step = test_step(model=saint,\n",
+    "                     dataloader=weather_val_dataloader,\n",
+    "                     loss_fn=loss_fn,\n",
+    "                     device=device)\n",
     "\n",
-    "# val_step"
+    "val_step"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1659,7 +1755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1696,7 +1792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
