--- a/main.ipynb
+++ b/main.ipynb
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
    "source": [
     "from src.tab_transformer.tab_data_setup import load_himalayas_data\n",
     "\n",
-    "tab_df = load_himalayas_data()\n",
+    "tab_df = load_himalayas_data(do_prepare=True, do_finalize=True)\n",
     "output_path = Path('data/himalayas_data')\n",
     "output_file = output_path / \"himalayas_data.csv\"\n",
     "tab_df.to_csv(output_file, index=False)\n",
