Added test.py to try run on DAS5 as Google Collab has space limitations.

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "1a50c283",
    "metadata": {},
    "outputs": [
@@ -409,13 +409,22 @@
    "source": [
     "from src.met_transformer.met_model import Stormer\n",
     "\n",
+    "# stormer = Stormer(img_size=[128, 256],\n",
+    "#                   variables=variables,\n",
+    "#                   met_weights=met_weights_with_offset,\n",
+    "#                   patch_size=2,\n",
+    "#                   hidden_size=1024,\n",
+    "#                   depth=24,\n",
+    "#                   num_heads=16,\n",
+    "#                   mlp_ratio=4.0)\n",
+    "\n",
     "stormer = Stormer(img_size=[128, 256],\n",
     "                  variables=variables,\n",
     "                  met_weights=met_weights_with_offset,\n",
     "                  patch_size=2,\n",
-    "                  hidden_size=1024,\n",
-    "                  depth=24,\n",
-    "                  num_heads=16,\n",
+    "                  hidden_size=612,\n",
+    "                  depth=20,\n",
+    "                  num_heads=9,\n",
     "                  mlp_ratio=4.0)\n",
     "\n",
     "stormer.to(device)"
