--- a/main.ipynb
+++ b/main.ipynb
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,31 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def create_writer(experiment_name: str,\n",
-    "                  model_name: str,\n",
-    "                  extra: str=None) -> torch.utils.tensorboard.writer.SummaryWriter():\n",
-    "\n",
-    "                  from datetime import datetime\n",
-    "                  import os\n",
-    "\n",
-    "                  timestamp = datetime.now().strftime(\"%Y-%m-%d--%H:%M:%S\")\n",
-    "\n",
-    "                  if extra:\n",
-    "                       log_dir = os.path.join(\"runs\", timestamp, experiment_name, model_name, extra) # Create the log directory path\n",
-    "                  else:\n",
-    "                       log_dir = os.path.join(\"runs\", timestamp, experiment_name, model_name) # Create the log directory path\n",
-    "\n",
-    "                  print(f\"[INFO] Created SummaryWriter, saving to: {log_dir}\")\n",
-    "                  return SummaryWriter(log_dir=log_dir)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -749,6 +725,7 @@
     "%%time\n",
     "from helper_functions import set_seeds\n",
     "from src.tab_transformer.tab_train import train\n",
+    "from helper_functions import create_writer\n",
     "\n",
     "set_seeds(42)\n",
     "\n",
@@ -31594,11 +31571,10 @@
    ],
    "source": [
     "%%time\n",
-    "from helper_functions import set_seeds\n",
+    "from helper_functions import set_seeds, create_writer\n",
     "from src.tab_transformer.tab_train import train\n",
     "\n",
     "set_seeds(42)\n",
-    "\n",
     "\n",
     "results = train(model=stormer,\n",
     "      train_dataloader=weather_train_dataloader,\n",
