--- a/main.ipynb
+++ b/main.ipynb
@@ -477,16 +477,17 @@
     "cat_dims = [len(np.unique(df_train[col])) for col in categorical_columns]\n",
     "\n",
     "# Hyperparameter selection based on default original architecture instantiation\n",
-    "saint = SAINT(\n",
+    "saint = saint = SAINT(\n",
     "    categories = tuple(cat_dims), \n",
     "    num_continuous = len(continuous_columns),                \n",
-    "    dim = 32,                           \n",
+    "    dim = 16, # dims = heads * dim_head (dim_head = 16 by default)                       \n",
     "    dim_out = 1,                       \n",
-    "    depth = 6,                       \n",
-    "    heads = 8,  \n",
+    "    depth = 2,                       \n",
+    "    heads = 8, \n",
+    "    dim_head = 4, \n",
     "    num_special_tokens=1,                      \n",
-    "    attn_dropout = 0.1,             \n",
-    "    ff_dropout = 0.1,                  \n",
+    "    attn_dropout = 0.5,             \n",
+    "    ff_dropout = 0.5,                  \n",
     "    mlp_hidden_mults = (4, 2),       \n",
     "    cont_embeddings = 'MLP',\n",
     "    attentiontype = 'colrow',\n",
@@ -508,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -525,8 +526,8 @@
    "source": [
     "from src.tab_transformer.tab_train import train_step, test_step\n",
     "\n",
-    "loss_fn = nn.CrossEntropyLoss().to(device)\n",
-    "optimizer = torch.optim.AdamW(saint.parameters(),lr=0.0001, betas=(0.9, 0.999), weight_decay=0.01)\n",
+    "loss_fn = nn.CrossEntropyLoss()\n",
+    "optimizer = torch.optim.AdamW(saint.parameters(),lr=0.00001, betas=(0.9, 0.999), weight_decay=0.01)\n",
     "\n",
     "train_step(model=saint,\n",
     "           dataloader=train_dataloader,\n",
@@ -728,7 +729,6 @@
     "from helper_functions import create_writer\n",
     "\n",
     "set_seeds(42)\n",
-    "\n",
     "\n",
     "results = train(model=saint,\n",
     "      train_dataloader=train_dataloader,\n",
@@ -1666,7 +1666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1724,9 +1724,9 @@
     "                  variables=variables,\n",
     "                  met_weights=met_weights_with_offset,\n",
     "                  patch_size=2,\n",
-    "                  hidden_size=1024,\n",
-    "                  depth=24,\n",
-    "                  num_heads=16,\n",
+    "                  hidden_size=612,\n",
+    "                  depth=12,\n",
+    "                  num_heads=12,\n",
     "                  mlp_ratio=4.0)\n",
     "\n",
     "stormer.to(device)"
@@ -1747,9 +1747,9 @@
    "source": [
     "from src.met_transformer.met_train import train_step, test_step\n",
     "\n",
-    "# Hyperparameters pulled from the paper\n",
-    "loss_fn = nn.CrossEntropyLoss().to(device)\n",
-    "optimizer = torch.optim.AdamW(stormer.parameters(),lr=3e-4, betas=(0.9, 0.999), weight_decay=1e-2)\n",
+    "# Hyperparameters pulled from the experiment tracking\n",
+    "loss_fn = nn.CrossEntropyLoss()\n",
+    "optimizer = torch.optim.AdamW(stormer.parameters(),lr=0.00001, betas=(0.9, 0.98), weight_decay=1e-2)\n",
     "\n",
     "train_step(model=stormer,\n",
     "           dataloader=weather_train_dataloader,\n",
@@ -1816,6 +1816,60 @@
     "## 7. DeepSummit Model\n",
     "\n",
     "Following the development of the SAINT and Stormer models, we merge both through late fusion to develop the DeepSummit model which leverages both the TabularDataset and WeatherDataset to develop a more comprehensive prediction. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "from model import DeepSummit\n",
+    "\n",
+    "saint_path = Path(\"src/models/saint_model.pth\")\n",
+    "stormer_path = Path(\"src/models/stormer_model.pth\")\n",
+    "\n",
+    "saint_cfg = dict(\n",
+    "    categories = tuple(cat_dims), \n",
+    "    num_continuous = len(continuous_columns),                \n",
+    "    dim = 16,                    \n",
+    "    dim_out = 1,                       \n",
+    "    depth = 2,                       \n",
+    "    heads = 8, \n",
+    "    dim_head = 4, \n",
+    "    num_special_tokens=1,                      \n",
+    "    attn_dropout = 0.5,             \n",
+    "    ff_dropout = 0.5,                  \n",
+    "    mlp_hidden_mults = (4, 2),       \n",
+    "    cont_embeddings = 'MLP',\n",
+    "    attentiontype = 'colrow',\n",
+    "    final_mlp_style = 'sep',\n",
+    "    y_dim = 2 \n",
+    ")\n",
+    "\n",
+    "stormer_cfg = dict(\n",
+    "    img_size=[128, 256],\n",
+    "    variables=variables,\n",
+    "    met_weights=met_weights_with_offset,\n",
+    "    patch_size=2,\n",
+    "    hidden_size=612,\n",
+    "    depth=12,\n",
+    "    num_heads=12,\n",
+    "    mlp_ratio=4.0\n",
+    ")\n",
+    "\n",
+    "deepsummit_model = DeepSummit(\n",
+    "    tabular_model_path=saint_path,\n",
+    "    weather_model_path=stormer_path,\n",
+    "    num_classes=2,\n",
+    "    freeze_layers=True,\n",
+    "    saint_kwargs=saint_cfg,\n",
+    "    stormer_kwargs=stormer_cfg\n",
+    ").to(device)\n",
+    "\n",
+    "optimizer = torch.optim.Adam(model.fusion.parameters(), lr=1e-3)\n",
+    "loss_fn = nn.CrossEntropyLoss()"
    ]
   }
  ],
