Cleaned up train_deepsummit.py and updated main.ipynb

--- a/main.ipynb
+++ b/main.ipynb
@@ -1824,52 +1824,148 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
-    "from model import DeepSummit\n",
+    "from src.tab_transformer.tab_model import SAINT\n",
+    "from src.met_transformer.met_model import Stormer\n",
+    "from src.late_fusion.model import DeepSummit\n",
+    "\n",
+    "from src.late_fusion.utils import FusionDataset\n",
+    "from src.tab_transformer.tab_utils import TabularDataset\n",
+    "from src.met_transformer.met_utils import WeatherDataset\n",
+    "\n",
+    "from src.late_fusion.extract_logits import extract_logits_tab, extract_logits_met\n",
+    "from src.helper_functions import set_seeds, save_model, create_writer\n",
+    "from src.late_fusion.train import train_step, test_step, train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "print(f\"Device is: {device}\\n\")\n",
+    "\n",
+    "set_seeds(42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Following the training of our SAINT and Stormer models, we saved the weights of the highest performing models. Therefore, we can import said weights, and freeze them so we can reuse these models. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.scripts.train_saint import tabular_train_dataloader, tabular_val_dataloader, tabular_test_dataloader\n",
     "\n",
     "saint_path = Path(\"src/models/saint_model.pth\")\n",
+    "saint = torch.load(saint_path, map_location=device).to(device)\n",
+    "\n",
+    "for parameter in saint.parameters(): parameter.requires_grad = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.scripts.train_stormer import weather_train_dataloader, weather_val_dataloader, weather_test_dataloader\n",
+    "\n",
     "stormer_path = Path(\"src/models/stormer_model.pth\")\n",
+    "stormer = torch.load(stormer_path, map_location=device).to(device)\n",
     "\n",
-    "saint_cfg = dict(\n",
-    "    categories = tuple(cat_dims), \n",
-    "    num_continuous = len(continuous_columns),                \n",
-    "    dim = 16,                    \n",
-    "    dim_out = 1,                       \n",
-    "    depth = 2,                       \n",
-    "    heads = 8, \n",
-    "    dim_head = 4, \n",
-    "    num_special_tokens=1,                      \n",
-    "    attn_dropout = 0.5,             \n",
-    "    ff_dropout = 0.5,                  \n",
-    "    mlp_hidden_mults = (4, 2),       \n",
-    "    cont_embeddings = 'MLP',\n",
-    "    attentiontype = 'colrow',\n",
-    "    final_mlp_style = 'sep',\n",
-    "    y_dim = 2 \n",
-    ")\n",
+    "for parameter in stormer.parameters(): parameter.requires_grad = False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Through our late-fusion approach, we extract all the logits from both models as well as the true labels, and passed these as parameters to a linear layer and learn from them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tabular_logits_train, y_train_tabular = extract_logits_tab(saint, tabular_train_dataloader, device)\n",
+    "weather_logits_train, _ = extract_logits_met(stormer, weather_train_dataloader, device)\n",
     "\n",
-    "stormer_cfg = dict(\n",
-    "    img_size=[128, 256],\n",
-    "    variables=variables,\n",
-    "    met_weights=met_weights_with_offset,\n",
-    "    patch_size=2,\n",
-    "    hidden_size=612,\n",
-    "    depth=12,\n",
-    "    num_heads=12,\n",
-    "    mlp_ratio=4.0\n",
-    ")\n",
+    "tabular_logits_val, y_val_tabular  = extract_logits_tab(saint, tabular_val_dataloader, device)\n",
+    "weather_logits_val,  _  = extract_logits_met(stormer, weather_val_dataloader, device)\n",
     "\n",
-    "deepsummit_model = DeepSummit(\n",
+    "tabular_logits_test, y_test_tabular = extract_logits_tab(saint, tabular_test_dataloader, device)\n",
+    "weather_logits_test,  _ = extract_logits_met(stormer, weather_test_dataloader, device)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given that we do not use a `.csv` file as the other models, we cannot reuse `create_dataloaders()`, so we instantiate the `DataLoader`s individually. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dataset = FusionDataset(tabular_logits_train, weather_logits_train, y_train_tabular)\n",
+    "val_dataset   = FusionDataset(tabular_logits_val,   weather_logits_val,   y_val_tabular)\n",
+    "test_dataset  = FusionDataset(tabular_logits_test,  weather_logits_test,  y_test_tabular)\n",
+    "\n",
+    "train_dataloader = DataLoader(train_dataset, batch_size=64, num_workers=os.cpu_count(), pin_memory=True, shuffle=True)\n",
+    "val_dataloader   = DataLoader(val_dataset,   batch_size=64, num_workers=os.cpu_count(), pin_memory=True)\n",
+    "test_dataloader  = DataLoader(test_dataset,  batch_size=64, num_workers=os.cpu_count(), pin_memory=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "deepsummit = DeepSummit(\n",
     "    tabular_model_path=saint_path,\n",
     "    weather_model_path=stormer_path,\n",
-    "    num_classes=2,\n",
+    "    num_classes=2,           \n",
     "    freeze_layers=True,\n",
-    "    saint_kwargs=saint_cfg,\n",
-    "    stormer_kwargs=stormer_cfg\n",
-    ").to(device)\n",
+    "    device=device\n",
+    ").to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss_fn = nn.CrossEntropyLoss()\n",
+    "optimizer = torch.optim.AdamW(deepsummit.parameters(), lr=1e-3)\n",
     "\n",
-    "optimizer = torch.optim.Adam(model.fusion.parameters(), lr=1e-3)\n",
-    "loss_fn = nn.CrossEntropyLoss()"
+    "deepsummit_results = train(model=deepsummit,\n",
+    "                train_dataloader=train_dataloader,\n",
+    "                val_dataloader=val_dataloader,\n",
+    "                test_dataloader=test_dataloader,\n",
+    "                optimizer=optimizer,\n",
+    "                loss_fn=loss_fn,\n",
+    "                epochs=50,\n",
+    "                writer=create_writer(experiment_name=\"deepsummit_runs\",\n",
+    "                                    extra=\"deepsummit_model\"))\n",
+    "                                    \n",
+    "save_model(saint,\n",
+    "          \"/var/scratch/ase347/DeepSummit/checkpoints\",\n",
+    "          \"deepsummit_model.pth\")"
    ]
   }
  ],
